# Qt

./: .gitignore
ChatServer/: CMakeLists.txt  ChatServer  main.cpp
ChatServer/data/: UserInfo.h
ChatServer/global/: const.h
ChatServer/grpc/: ChatGrpcClient.cpp  ChatGrpcClient.h  ChatGrpcServer.cpp  ChatGrpcServer.h  RPCPool.h  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
ChatServer/mysql/: MysqlDao.cpp  MysqlDao.h  MysqlManager.cpp  MysqlManager.h
ChatServer/redis/: RedisManager.cpp  RedisManager.h
ChatServer/server/: LogicSystem.cpp  LogicSystem.h  Server.cpp  Server.h
ChatServer/session/: MsgNode.cpp  MsgNode.h  Session.cpp  Session.h
ChatServer2/: CMakeLists.txt  ChatServer2  main.cpp
ChatServer2/data/: UserInfo.h  im.pb.h
ChatServer2/global/: UserManager.cpp  UserManager.h  const.h
ChatServer2/grpc/: ChatGrpcClient.cpp  ChatGrpcClient.h  ChatGrpcServer.cpp  ChatGrpcServer.h  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
ChatServer2/mysql/: MysqlDao.cpp  MysqlDao.h  MysqlManager.cpp  MysqlManager.h
ChatServer2/redis/: RedisManager.cpp  RedisManager.h
ChatServer2/server/: AsioPool.cpp  LogicSystem.cpp  LogicSystem.h  (+1 more)
CppChat/: CMakeLists.txt  database.cpp  database.h  httpmanager.cpp  httpmanager.h  loginscreen.cpp  loginscreen.h  main.cpp  mainwindow.cpp  mainwindow.h  registerscreen.cpp  registerscreen.h  res.qrc  stylemanager.cpp  stylemanager.h  tcpmanager.cpp  tcpmanager.h  usermanager.cpp  usermanager.h
CppChat/LoginInterface/: forgotscreen.cpp  forgotscreen.h  loginscreen.cpp  loginscreen.h  registerscreen.cpp  registerscreen.h
CppChat/MainInterface/: friendslistpart.cpp  mainscreen.cpp  mainscreen.h  sidebarpart.cpp  sidebarpart.h  toptitlepart.h
CppChat/MainInterface/Chat/: chatarea.cpp  chatarea.h  chatpart.cpp  chattoparea.cpp  chattoparea.h
CppChat/MainInterface/Chat/ChatArea/: chatarea.cpp
CppChat/MainInterface/Chat/ChatArea/InputArea/: inputarea.cpp  inputarea.h
CppChat/MainInterface/Chat/ChatArea/MessageArea/: messagearea.cpp  messagearea.h  messagedelegate.cpp  messagedelegate.h  messagemodel.cpp  messagemodel.h  messagetypes.h
CppChat/MainInterface/Chat/ChatTopArea/: chattoparea.cpp  chattoparea.h
CppChat/MainInterface/Chat/ChatTopArea/SideNews/: friendsnewsitem.cpp  friendsnewsitem.h  notificationpanel.cpp  notificationpanel.h  sidenews.cpp  sidenews.h  systemnewsitem.cpp  systemnewsitem.h
CppChat/MainInterface/FriendsList/: frienditem.h  frienditemdelegate.cpp  frienditemdelegate.h  friendslistpart.cpp  friendslistpart.h  friendsmodel.cpp  friendsmodel.h
CppChat/MainInterface/List/: listpart.cpp
CppChat/MainInterface/List/FriendsList/: frienditem.h  frienditemdelegate.cpp  frienditemdelegate.h  friendslistpart.cpp  friendslistpart.h
CppChat/MainInterface/List/MessagesList/: messageitemdelegate.cpp  messageitemdelegate.h  messageslistpart.cpp  messageslistpart.h  messagesmodel.cpp  messagesmodel.h
CppChat/Properties/: global.cpp  global.h  signalrouter.h  sourcemanager.cpp  sourcemanager.h
CppChat/Styles/: stylesheetBlue.qss  stylesheetLight.qss
CppChat/proto/: im.pb.cc  im.pb.h  im.proto
CppChatServer/: AsioPool.h  CMakeLists.txt  ConfigManager.h  GateWayServer.cpp  GateWayServer.h  LogicSystem.cpp  LogicSystem.h  RedisManager.cpp  RedisManager.h  Session.cpp  Session.h  VerifyClient.h  config.ini  const.h  main  main.cpp  message.grpc.pb.h
CppChatServer/.cache/clangd/index/: AsioPool.cpp.2229D24D5EDBEED8.idx  AsioPool.h.75BAF15D23EFB210.idx  ConfigManager.h.00B2AB4C0470BDD6.idx  GateWayServer.cpp.F45B3CB9C59AEE00.idx  GateWayServer.h.D6E1686503DF0A6F.idx  LogicSystem.cpp.75EEC214452206DE.idx  LogicSystem.h.8C65E36C87762C1C.idx  Session.cpp.43056D88E14D3293.idx  Session.h.9C30B710E367D3AD.idx  Singleton.h.3D05DA987298CA51.idx  VerifyClient.h.20B14A258DF152DB.idx  const.h.5CFB0DC3B9164B6D.idx  main.cpp.7A3E8B77ECDBA362.idx  message.grpc.pb.cc.1720481885DBC5C0.idx  message.grpc.pb.h.ADC8F2813E4088C2.idx  message.pb.cc.0CE42628F71212A8.idx  message.pb.h.E7D8311DED3467E2.idx
CppChatServer/global/: const.h
CppChatServer/grpc/: StatusClient.cpp  VerifyClient.h  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
CppChatServer/mysql/: MysqlDao.cpp  MysqlDao.h  MysqlManager.cpp  MysqlManager.h
CppChatServer/redis/: RedisManager.cpp
CppChatServer/server/: AsioPool.cpp  GateWayServer.cpp  LogicSystem.cpp  LogicSystem.h
CppChatServer/session/: Session.cpp  Session.h
EasyMusic/: CMakeLists.txt  README.md  icon.qrc  lyrices.cpp  lyrices.h  lyricswidget.cpp  lyricswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h
EasyMusicQt/: icon.qrc  lyrices.py  lyricswidget.py  main.py  mainwindow.py  resources.py  settings.py
EasyPaint/: CMakeLists.txt  Micro.h  README.md  contenteditor.cpp  contenteditor.h  drawwidget.cpp  drawwidget.h  mainwindow.cpp  mainwindow.h  resources.qrc  staticdata.cpp  staticdata.h
EasyPaint/Shape/: cursor.cpp  cursor.h  ellipse.cpp  ellipse.h  line.cpp  line.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  text.cpp  text.h  triangle.cpp  triangle.h
GateWayServer/: CMakeLists.txt
MultiMedia/: CMakeLists.txt  README.md  main.cpp  screencapturepreview.cpp  screencapturepreview.h  screenlistmodel.cpp  screenlistmodel.h  windowlistmodel.cpp  windowlistmodel.h
PDFViewer/: CMakeLists.txt  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h
ScreenShot/: CMakeLists.txt  main.cpp  screenshot.cpp  screenshot.h
ScreenShot2/: CMakeLists.txt  icons.qrc  main.cpp  overlaywidget.cpp  overlaywidget.h  snipater.cpp  snipater.h  tools.cpp  tools.h  widget.cpp  widget.h
SmallTray/: CMakeLists.txt  window.cpp  window.h
StatusServer/: CMakeLists.txt  StatusServer  main.cpp
VarifyServer/: config.json  const.js  package-lock.json  package.json  server.js
tmp/: CMakeLists.txt  ChatMessage.h  MessageType.h  chatmessagedelegate.cpp  chatmessagedelegate.h  chatmessagemodel.cpp  chatmessagemodel.h  chatwidget.cpp  chatwidget.h  main.cpp  mainwindow.cpp
(+25 files in other folders)
